frontend/test/should_fail/defYield_008b.grg
using defYield;

test t
{
	def x:B;
	y:B;
	yield { x = y; }
}

pattern p(x:B, def z:B)
{
	yield { z = x; }
}
